policies/linkerd-policies.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: auth-http-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: auth-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: auth-grpc-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: auth-grpc
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: documents-http-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: documents-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: documents-grpc-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: documents-grpc
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: files-http-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: files-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: files-grpc-mtls
  namespace: codex
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: files-grpc
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: any-mesh-tls
